lang.java.statics.test/tests/positive/classes/fields/inner.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class B {}
    public B f;
}

