lang.java.statics.test/tests/negative/packages/qualified-reference-to-missing-class.no.javtest
STATIX fail java\.names\.member-type-name.*\"C\" JAVAC  fail cannot find symbol

[p] {

    [A]
    package p;
    public class A {
        public q.r.C c;
    }

}

[q] {
    [r] {

        [B]
        package q.r;
        public class B {}

    }
}
